--- a/css/aside.sass
+++ b/css/aside.sass
@@ -2,122 +2,169 @@ aside
 	width: 240px 
 	height: calc(100% - 48px)
 	background: #212628
-	float: right
 	font-family: 'Roboto', sans-serif
 	box-sizing: border-box
 	clear: both
+	position: fixed
+	right: 0
+	z-index: 2
 	&:after
 		content: " "
 		display: block
 		clear: both
 		width: 100%
 		height: 1px
-	.title
-		height: 60px
-		text-transform: uppercase
-		color: #4b5153
-		line-height: 60px
-		font-size: 1rem
-		font-weight: 600
-		padding-left: 40px
-		border-bottom: #2f3335 solid 1px
-	.login
-		color: #dcdf3c
-		height: 45px
-		line-height: 45px
-		border-bottom: #2f3335 solid 1px
-		cursor: pointer
-		transition: background, color, 1s, easy-in-out
-		i
-			padding-left: 14px
-			padding-right: 15px
+	.services 
+		list-style: none
+		margin: 0
+		padding: 0
+		.title
+			display: block
+			height: 60px
+			width: 100%
+			text-transform: uppercase
+			color: #4b5153
+			line-height: 60px
 			font-size: 1rem
-		&:hover
-			background: #dcdf3c
-			color: black
-	.services
+			font-weight: 600
+			padding-left: 40px
+			border-bottom: #2f3335 solid 1px
+		.login
+			height: 45px
+			line-height: 50px
+			border-bottom: #2f3335 solid 1px
+			cursor: pointer
+			transition: background, 0.2s, easy-in-out
+			display: block
+			a
+				text-decoration: none
+				width: 100%
+				background: url(../img/dashboard-sprites.png) no-repeat
+				background-position: 0px 0px
+				display: inline-block
+				padding-left: 40px
+				color: #dcdf3c
+				transition: color, 0.2s, easy-in-out
+			&:hover
+				background: #dcdf3c
+				a 
+					background-position: 0px -50px
+					color: black
+		.about-bank
+			a
+				width: 100%
+				text-decoration: none
+				color: #fff
+				line-height: 28px
+				font-size: 0.928rem
+				border-left: #b99dc4 solid 6px
+				padding-left: 40px
+				display: block
+				background-image: linear-gradient(to left, transparent, transparent 50%, #b99dc4 50%, #b99dc4)
+				background-position: 100% 0
+				background-size: 200% 100%
+				transition: all .25s ease-in
+				&:hover
+					background-position: 0 0
+	.submenu
+		list-style: none
+		margin: 0
+		padding: 0
 		color: #fff
-		line-height: 28px
+		line-height: 30px
 		font-size: 0.928rem
 		border-bottom: #2f3335 solid 1px
-		.submenu
+		display: block
+		.other-services
 			font-size: 0.857rem
-			font-weight: 600
+			font-weight: 60
 			color: #4b5153
 			padding-left: 46px
-		.main-services
-			border-left: #b99dc4 solid 6px
-			span
+		li
+			a
+				width: 100%
+				text-decoration: none
 				padding-left: 40px
 				display: block
-				cursor: pointer
-				transition: background, 1s, easy-in-out
+				border-left: #fbaa69 solid 6px
+				color: white
+				background-image: linear-gradient(to left, transparent, transparent 50%, #fbaa69 50%, #fbaa69)
+				background-position: 100% 0
+				background-size: 200% 100%
+				transition: all .25s ease-in
 				&:hover
-					background: #b99dc4
-		.different-services
-			border-left: #fbaa69 solid 6px
-			span
-				padding-left: 40px
-				display: block
-				cursor: pointer
-				transition: background, 1s, easy-in-out
+					background-position: 0 0
+			&:nth-child(7)
+				border-bottom: #2f3335 solid 1px
+			&:nth-child(8)
+				list-style: none
+				margin: 0
+				padding: 0
+				height: 45px
+				line-height: 45px
+				border-bottom: #2f3335 solid 1px
+				transition: background, 0.2s, easy-in-out
+				// padding-left: 40px
+				a
+					width: 100%
+					text-decoration: none
+					border: none
+					color: #dcdf3c
+					background: url(../img/dashboard-sprites.png) no-repeat
+					background-position: 0px -103px
+					display: inline-block
+					transition: color, 0.2s, easy-in-out
+					&:hover
+						
 				&:hover
-					background: #fbaa69
-	.sections
-		height: 45px
-		line-height: 45px
-		// padding-left: 40px
-		color: #dcdf3c
-		border-bottom: #2f3335 solid 1px
-		cursor: pointer
-		transition: background, color, 1s, easy-in-out
-		i
-			padding-left: 14px
-			padding-right: 15px
-			font-size: 1rem
-		&:hover
-			background: #dcdf3c
-			color: black
+					background: #dcdf3c
+					color: black
+					a
+						color: black
+						background-position: 0px -153px
 	.contacts
-		height: 45px
+		list-style: none
+		margin: 0
+		padding: 0
 		line-height: 25px
-		height: 70px
-		padding-top: 112px
+		height: 100px
+		position: fixed
+		bottom: 0
+		right: 0
+		width: 240px
 		.title-contacts
 			color: #4b5153
 			font-size: 0.857rem
 			font-weight: 600
 			padding-left: 40px
-		div
-			i
-				color: #dcdf3c
-				padding-left: 14px
-				padding-right: 10px
-				font-size: 1.286rem
-			.telephone
+
+		.telephone
+			color: white
+			font-size: 1.571rem
+			font-weight: 600
+			padding-left: 40px
+			background: url(../img/dashboard-sprites.png) no-repeat
+			background-position: 0px -215px
+		.online-help
+			background: #161a1b
+			height: 50px
+			line-height: 50px
+			font-size: 1.142rem
+			transition: background, 0.5s, easy-in-out
+			a
+				width: 100%
+				text-decoration: none
+				background: url(../img/dashboard-sprites.png) no-repeat
+				background-position: 0px -315px
 				color: white
-				font-size: 1.571rem
-				font-weight: 600
-	.online-help
-		background: #161a1b
-		height: 50px
-		line-height: 50px
-		color: white
-		font-size: 1.142rem
-		cursor: pointer
-		transition: background, color, 1s, easy-in-out
-		i
-			color: #dcdf3c
-			padding-left: 14px
-			padding-right: 10px
-			font-size: 1.286rem
-			transition: color, 1s, easy-in-out
-		&:hover
-			background: #dcdf3c
-			color: black
-			i
-				color: black
-		&:active
-			background: #c2c52e
+				padding-left: 40px
+				transition: color, 0.2s, easy-in-out
+			&:hover
+				background: #dcdf3c
+				a
+					color: black
+					background-position: 0px -366px
+			&:active
+				background: #c2c52e
 
 
