--- a/css/content.sass
+++ b/css/content.sass
@@ -1,11 +1,13 @@
 main
 	font-family: 'Roboto', sans-serif
+	box-sizing: border-box
 	.navigation
 		width: 100%
 		height: 72px
 		.menu
 			width: 1000px
-			float: right
+			// float: right
+			right: -240px
 			ul 
 				list-style: none
 				display: block
@@ -26,55 +28,46 @@ main
 	.main-slider
 		height: 529px
 		position: relative
-		.slider
-			background: #7196da
-			width: calc(100% - 260px)
-			position: absolute
-			box-sizing: border-box
-			img
+		.slider-1, .slider-2, .slider-3, .slider-4
+			.slider
+				background: #7196da
+				width: calc(100% - 260px)
 				position: absolute
-				top: -52px
-				left: 40px
-				width: 209px
-				height: 104px
-			ul
-				list-style: none
-				margin: 0
-				padding-left: 60px
-				li
-					h2
-						font-size: 5.285rem
-						color:#fff
-						padding-top: 80px
-						font-weight: 600
-						margin: 0
-					&:nth-child(2)
-						font-size: 1.571rem
-						color:#fff
-						padding-top: 40px
-						font-weight: 600
-						i 
-							padding-left: 30px
-					&:nth-child(3)
-						font-size: 1rem
-						color:#fff
-						font-weight: 600
-						padding-top: 30px
-					&:nth-child(4), &:nth-child(5)
-						font-size: 1rem
+				box-sizing: border-box
+				img
+					position: absolute
+					top: -52px
+					left: 40px
+					width: 209px
+					height: 104px
+				h2
+					font-size: 5.285rem
+					color:#fff
+					padding-top: 80px
+					font-weight: 600
+					margin: 0
+					padding-left: 60px
+				p
+					font-size: 1rem
+					color:#fff
+					padding-top: 40px
+					font-weight: 600
+					padding-bottom: 100px
+					padding-left: 60px
+					margin: 0
+					line-height: 26px
+					span
+						&:first-child
+							font-size: 1.571rem
+							i 
+								padding-left: 30px
+						&:last-child
+							font-size: 1.571rem
+					.other-color
 						color:#465f8c
-						font-weight: 600
-						padding-top: 20px
-					&:nth-child(6)
+					.other-size
 						color: #b8c8eb
 						font-size: 0.785rem
-						padding-top: 30px
-					&:last-child
-						color: #fff
-						font-size: 1.571rem
-						padding-top: 10px
-						font-weight: 600
-						padding-bottom: 100px
 		.additional-info
 			width: 354px
 			height: 112px
@@ -243,6 +236,7 @@ main
 			width: 550px 
 			margin: auto
 			margin-top: 60px
+			font-size: 0
 			h2
 				padding-left: 0
 				margin: 0
@@ -251,6 +245,7 @@ main
 				padding-bottom: 30px
 			button
 				height: 44px 
+				font-size: 1rem
 				margin: 0
 				text-align: center
 				border: 2px solid #dcdf3c
@@ -277,13 +272,69 @@ main
 				margin-bottom: 20px
 				background: transparent
 				border: 2px solid #c6c6b9
-			// input
-			// 	&:placeholder
-			// 		color: black
+				font-size: 1rem
+				font-weight: 600
+			input::-webkit-input-placeholder
+				color: black
+				opacity: 1
+				transition: opacity 0.3s ease
 			input[type="submit"]
 				border: 2px solid #dcdf3c
 				background: white
-
+	.master-card
+		width: calc(100% - 260px)
+		height: 300px
+		background: #5bdcaa
+		padding-left: 60px
+		padding-top: 50px
+		margin-top: 20px
+		box-sizing: border-box
+		color: white
+		position: relative
+		h2
+			padding-left: 0
+			margin: 0
+			font-weight: 600
+			font-size: 2.7rem
+			padding-bottom: 30px
+		p 
+			padding-bottom: 70px
+			margin: 0
+		.logo-master-card
+			width: 153px
+			position: absolute
+			bottom: 15px
+		.picture-1
+			width: 250px
+			right: 90px
+			position: absolute
+			bottom: 0px
+	.credit-program
+		width: calc(100% - 260px)
+		height: 300px
+		background: #ebb641
+		padding-left: 60px
+		padding-top: 40px
+		margin-top: 20px
+		box-sizing: border-box
+		color: white
+		margin-bottom: 20px
+		position: relative
+		h2
+			padding-left: 0
+			margin: 0
+			font-weight: 600
+			font-size: 2.7em
+			padding-bottom: 30px
+		p 
+			padding-bottom: 70px
+			margin: 0
+			line-height: 23px
+		img
+			width: 250px
+			right: 75px
+			position: absolute
+			bottom: 0px
 
 
 
