--- a/css/header.sass
+++ b/css/header.sass
@@ -7,49 +7,30 @@ header
 	height: 48px
 	background: #161a1b
 	font-family: 'Roboto', sans-serif
-	.other-type
-		width: 480px
-		height: 48px 
-		margin-left: 30px
-		float: left
-		line-height: 48px
-		font-weight: 500
-		// text-align: center
-		span 
-			color: #71797c
-			text-transform: uppercase
+	.wrap-access-type
+		#input-access-type
+			width:150px
+			height: 48px
+			display: none
+		.access-type
+			width: 480px
+			height: 48px 
 			margin-left: 30px
-			font-size: 0.929rem
-			cursor: pointer
-			transition: color,1s, easy-in-out
-			&:hover, &:active
-				color: #f4f750
+			float: left
+			line-height: 48px
+			font-weight: 500
+			// text-align: center
+			span 
+				color: #71797c
+				text-transform: uppercase
+				margin-left: 30px
+				font-size: 0.929rem
+				cursor: pointer
+				transition: color,1s, easy-in-out
+				&:hover, &:active
+					color: #f4f750
 	.setting
 		font-family: 'PT Sans', sans-serif
-		.search-service
-			width: 240px
-			height: 100% 
-			padding-left: 10px
-			float: right
-			box-sizing: border-box
-			position: fixed
-			top: 0
-			right: 0
-			background: #161a1b
-			line-height: 48px
-			i 
-				color: #dcdf3c
-				margin-right: 13px
-			input
-				background: transparent
-				color: #717779
-				border: none
-				font-size: 0.929rem
-				&:focus
-					outline: none
-			input::-webkit-input-placeholder
-				opacity: 1
-				transition: opacity 0.3s ease
 		.change-lang
 			right: 240px
 			position: absolute
