--- a/css/aside.sass
+++ b/css/aside.sass
@@ -1,13 +1,13 @@
 aside 
 	width: 240px 
-	height: calc(100% - 48px)
+	height: 100%
 	background: #212628
 	font-family: 'Roboto', sans-serif
 	box-sizing: border-box
 	clear: both
 	position: fixed
 	right: 0
-	z-index: 2
+	z-index: 3
 	&:after
 		content: " "
 		display: block
@@ -18,6 +18,30 @@ aside
 		list-style: none
 		margin: 0
 		padding: 0
+		.search-service
+			width: 240px
+			height: 48px
+			padding-left: 20px
+			float: right
+			box-sizing: border-box
+			position: fixed
+			top: 0
+			right: 0
+			background: #161a1b
+			line-height: 48px
+			i 
+				color: #dcdf3c
+				margin-right: 13px
+			input
+				background: transparent
+				color: #717779
+				border: none
+				font-size: 0.929rem
+				&:focus
+					outline: none
+			input::-webkit-input-placeholder
+				opacity: 1
+				transition: opacity 0.3s ease
 		.title
 			display: block
 			height: 60px
@@ -27,7 +51,7 @@ aside
 			line-height: 60px
 			font-size: 1rem
 			font-weight: 600
-			padding-left: 40px
+			padding-left: 50px
 			border-bottom: #2f3335 solid 1px
 		.login
 			height: 45px
@@ -42,7 +66,7 @@ aside
 				background: url(../img/dashboard-sprites.png) no-repeat
 				background-position: 0px 0px
 				display: inline-block
-				padding-left: 40px
+				padding-left: 50px
 				color: #dcdf3c
 				transition: color, 0.2s, easy-in-out
 			&:hover
@@ -58,7 +82,7 @@ aside
 				line-height: 28px
 				font-size: 0.928rem
 				border-left: #b99dc4 solid 6px
-				padding-left: 40px
+				padding-left: 50px
 				display: block
 				background-image: linear-gradient(to left, transparent, transparent 50%, #b99dc4 50%, #b99dc4)
 				background-position: 100% 0
@@ -84,7 +108,7 @@ aside
 			a
 				width: 100%
 				text-decoration: none
-				padding-left: 40px
+				padding-left: 50px
 				display: block
 				border-left: #fbaa69 solid 6px
 				color: white
@@ -136,13 +160,13 @@ aside
 			color: #4b5153
 			font-size: 0.857rem
 			font-weight: 600
-			padding-left: 40px
+			padding-left: 50px
 
 		.telephone
 			color: white
 			font-size: 1.571rem
 			font-weight: 600
-			padding-left: 40px
+			padding-left: 50px
 			background: url(../img/dashboard-sprites.png) no-repeat
 			background-position: 0px -215px
 		.online-help
@@ -151,13 +175,14 @@ aside
 			line-height: 50px
 			font-size: 1.142rem
 			transition: background, 0.5s, easy-in-out
+			width: 100%
 			a
 				width: 100%
 				text-decoration: none
 				background: url(../img/dashboard-sprites.png) no-repeat
 				background-position: 0px -315px
 				color: white
-				padding-left: 40px
+				padding-left: 50px
 				transition: color, 0.2s, easy-in-out
 			&:hover
 				background: #dcdf3c
