--- a/css/content.sass
+++ b/css/content.sass
@@ -1,6 +1,8 @@
 main
 	font-family: 'Roboto', sans-serif
 	box-sizing: border-box
+	max-width: 1180px
+	min-width: 640px
 	.navigation
 		width: 100%
 		height: 72px
@@ -25,21 +27,38 @@ main
 					ul
 						div
 							display: none
-	.main-slider
-		height: 529px
+	.slider
 		position: relative
-		.slider-1, .slider-2, .slider-3, .slider-4
-			.slider
+		width: calc(100% - 260px)
+		.site-logo
+			position: absolute
+			top: -52px
+			left: 40px
+			width: 209px
+			height: 104px
+			z-index: 2
+		.additional-info
+			width: 354px
+			height: 112px
+			position: absolute
+			bottom: -20px
+			right: 20px
+			background: #dcdf3c
+			font-size: 1.142rem
+			font-weight: 500
+			z-index: 2
+			p 
+				margin: 0
+				padding-left: 25px
+				padding-top: 20px
+				line-height: 25px
+		.main-slider
+			.proposal-1
 				background: #7196da
 				width: calc(100% - 260px)
-				position: absolute
+				position: relative
 				box-sizing: border-box
-				img
-					position: absolute
-					top: -52px
-					left: 40px
-					width: 209px
-					height: 104px
+				height: 550px
 				h2
 					font-size: 5.285rem
 					color:#fff
@@ -68,48 +87,65 @@ main
 					.other-size
 						color: #b8c8eb
 						font-size: 0.785rem
-		.additional-info
-			width: 354px
-			height: 112px
-			position: absolute
-			bottom: -20px
-			right: 280px
-			background: #dcdf3c
-			font-size: 1.142rem
-			font-weight: 500
-			p 
-				margin: 0
-				padding-left: 25px
-				padding-top: 20px
-				line-height: 25px
+			.proposal-2
+				background: #fa323c
+				width: calc(100% - 260px)
+				position: relative
+				box-sizing: border-box
+				height: 550px
+				h2
+					font-size: 5.285rem
+					color:#fff
+					padding-top: 80px
+					font-weight: 600
+					margin: 0
+					padding-left: 60px
+				.kartka
+					width: 500px
+					position: absolute
+					right: 60px
+					bottom: 0
+			.proposal-3
+				background: #00a27d
+				width: calc(100% - 260px)
+				position: relative
+				box-sizing: border-box
+				height: 550px
+				h2
+					font-size: 5.285rem
+					color:#fff
+					padding-top: 80px
+					font-weight: 600
+					margin: 0
+					padding-left: 60px
 	.table 
 		height: 450px
-		width: calc(100% - 360px)
+		width: calc(100% - 300px)
+		.wrap-caption
+			text-align: left
+			padding-left: 60px
+			padding-top: 50px
+			h2
+				margin: 0
+				font-weight: 600
+				font-size: 2rem
+				display: inline-block
+				padding-right: 22px
+			select
+				display: inline-block
+				width: 136px
+				height: 36px
+				border: 2px solid #7196da
+				background: transparent
+				option 
+					i 
+						color: black
+			span
+				display: block
+				font-size: 0.714rem
 		table 
 			padding-left: 60px
-			width: 875px
-			caption
-				text-align: left
-				padding-left: 60px
-				padding-top: 50px
-				h2
-					margin: 0
-					font-weight: 600
-					font-size: 2rem
-					display: inline-block
-					padding-right: 22px
-				select
-					display: inline-block
-					width: 136px
-					height: 36px
-					border: 2px solid #7196da
-					background: transparent
-					option 
-						i 
-							color: black
-				span
-					display: block
-					font-size: 0.714rem
+			width: 90%
 			tr
 				padding-bottom: 20px
 				height: 40px
@@ -126,7 +162,6 @@ main
 			width: 320px
 			height: 48px
 			margin-top: 40px
-			text-indent: 30px
 			margin-left: 60px
 			border: 2px solid #7196da
 			background: transparent
@@ -134,6 +169,8 @@ main
 		padding-left: 60px
 		padding-top: 88px
 		padding-bottom: 100px
+		width: calc(100% - 260px)
+		box-sizing: border-box
 		h2
 			margin: 0
 			font-weight: 600
@@ -158,12 +195,14 @@ main
 	.info
 		width: calc(100% - 260px)
 		height: 489px
+		overflow: hidden
 		.info-deposit
-			width: 50%
+			width: 62%
 			padding-left: 60px
 			background: #7196da
 			float: left
 			display: inline-block
+			height: 100%
 			h2
 				font-weight: 600
 				font-size: 2rem
@@ -185,11 +224,11 @@ main
 					font-weight: 600
 
 		.map 
-			width: 40%
+			width: 32%
 			background: #eee
 			float: left
 			display: inline-block
-			height: 488px
+			height: 100%
 			clear:right
 	.useful-info
 		padding-left: 60px
@@ -197,6 +236,7 @@ main
 		padding-bottom: 60px
 		width: calc(100% - 260px)
 		height: 474px
+		box-sizing: border-box
 		h2
 			padding-left: 0
 			margin: 0
@@ -232,6 +272,7 @@ main
 		height: 680px
 		background: #f8f8e7
 		border: 1px solid #ebeb88
+		box-sizing: border-box
 		div
 			width: 550px 
 			margin: auto
@@ -251,12 +292,12 @@ main
 				border: 2px solid #dcdf3c
 				background: white
 				margin-bottom: 43px
-				&:first-child
-					width: 150px
-				&:last-child
+				font-weight: 500
+				&:nth-child(3)
 					width: 200px
 			.checked
 				background: #dcdf3c
+				width: 122px
 			p 
 				padding-bottom: 40px
 				font-size: 1rem
@@ -335,6 +376,17 @@ main
 			right: 75px
 			position: absolute
 			bottom: 0px
+.success 
+	border: 1px solid #7CFC00!important
 
+.error 
+	border: 1px solid red!important
 
-
+em.error 
+	color: #ccc
+	border: none!important
+	float: right
+	font-size: 12px
+	display: inline-block
+	top: -20px
+	position: relative
