--- a/css/footer.sass
+++ b/css/footer.sass
@@ -68,14 +68,16 @@ footer
 				display: block
 			i
 				display: inline-block
-				font-size: 1.5rem
+				font-size: 2.4rem
 				color: #ebebeb
 				padding-right: 10px
 				padding-top: 15px
 				cursor: pointer
 				transition: color, 1s, easy-in-out
 				&:hover
-					color: #dcdf3c
+					color: #dcdf3c 
+				&:last-child
+					font-size: 2.6rem
 
 
 
